errors.txt
    Checking piper v1.0.0 (/Users/biplavbarua/Developer/piper)
error[E0433]: failed to resolve: use of undeclared type `Spyder`
   --> src/app.rs:210:26
    |
210 |             let spyder = Spyder::new(scan_root);
    |                          ^^^^^^ use of undeclared type `Spyder`
    |
help: a struct with a similar name exists
    |
210 -             let spyder = Spyder::new(scan_root);
210 +             let spyder = Sender::new(scan_root);
    |
help: consider importing this struct
    |
  1 + use crate::spyder::Spyder;
    |

warning: unused import: `std::time::Duration`
 --> src/app.rs:3:5
  |
3 | use std::time::Duration;
  |     ^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `crate::scanner`
 --> src/app.rs:9:5
  |
9 | use crate::scanner;
  |     ^^^^^^^^^^^^^^

error[E0560]: struct `FileItem` has no field named `reason`
   --> src/app.rs:219:21
    |
219 |                     reason: res.reason,
    |                     ^^^^^^ `FileItem` does not have this field
    |
    = note: all struct fields are already assigned

error[E0609]: no field `reason` on type `&FileItem`
   --> src/ui.rs:144:67
    |
144 |         f.render_widget(Paragraph::new(format!("Reason: {}", item.reason)).style(Style::default().fg(Color::Magenta)), chunks[1]);
    |                                                                   ^^^^^^ unknown field
    |
    = note: available fields are: `path`, `original_size`, `compressed_size`, `status`

warning: unused variable: `one_day`
  --> src/scanner.rs:13:9
   |
13 |     let one_day = Duration::from_secs(60 * 60 * 24);
   |         ^^^^^^^ help: if this is intentional, prefix it with an underscore: `_one_day`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

Some errors have detailed explanations: E0433, E0560, E0609.
For more information about an error, try `rustc --explain E0433`.
warning: `piper` (bin "piper") generated 3 warnings
error: could not compile `piper` (bin "piper") due to 3 previous errors; 3 warnings emitted
